--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer">
   <small>
-    <%= t ".copyright" %>
+    <%= t "layouts.footer.copyright" %>
   </small>
   <nav>
     <ul>
-      <li><%= link_to t(".about"), about_path %></li>
-      <li><%= link_to t(".help"), help_path %></li>
+      <li><%= link_to t("layouts.footer.about"), about_path %></li>
+      <li><%= link_to t("layouts.footer.help"), help_path %></li>
     </ul>
   </nav>
 </footer>
