--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1> <%= t ".title" %> </h1>
+<h1><%= t "static_pages.home.title" %></h1>
+<div class="center jumbotron">
+  <%= link_to t("static_pages.home.signup"), signup_path, class: "btn btn-lg btn-primary" %>
+</div>
