--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,27 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to t(".title"), root_path ,id: "logo" %>
+    <%= link_to t("layouts.header.title"), root_path ,id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t(".home"), root_path %></li>
-        <li><%= link_to t(".login"), "#" %></li>
+        <li><%= link_to t("layouts.header.home"), root_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to t("layouts.header.users"), users_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t("layouts.header.account") %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("layouts.header.profile"), current_user %></li>
+              <li><%= link_to t("layouts.header.settings"), edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("layouts.header.logout"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("layouts.header.login"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
