--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t ".name" %></h1>
+<h1><%= t "static_pages.about.title" %></h1>
 <h2>
-  <%= t ".content_about" %>
+  <%= t "static_pages.about.content_about" %>
 </h2>
