--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t ".title" %></h1>
-<h2><%= t ".name" %></h2>
-<h2><%= t ".address" %></h2>
-<h2><%= t ".phone" %></h2>
+<h1><%= t "static_pages.help.title" %></h1>
+<h2><%= t "static_pages.help.name" %></h2>
+<h2><%= t "static_pages.help.address" %></h2>
+<h2><%= t "static_pages.help.phone" %></h2>
