--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,12 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("layouts.header.profile"), current_user %></li>
-              <li><%= link_to t("layouts.header.settings"), edit_user_path(current_user) %></li>
+              <li><%= link_to t("layouts.header.settings"),
+                edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to t("layouts.header.logout"), logout_path, method: :delete %>
+                <%= link_to t("layouts.header.logout"), logout_path,
+                  method: :delete %>
               </li>
             </ul>
           </li>
