--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
       <%= f.label :password_confirmation, t("users.new.confirmation") %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
 
-      <%= f.submit t "users.new.create", class: "btn btn-primary" %>
+      <%= f.submit t("users.new.create"), class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
