--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,11 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("layouts.header.home"), root_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("layouts.header.users"), users_path %></li>
+          <% if current_user.is_admin? %>
+            <li><%= link_to t("layouts.header.users"), admin_root_path %></li>
+          <% else %>
+            <li><%= link_to t("layouts.header.users"), users_path %></li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t("layouts.header.account") %> <b class="caret"></b>
@@ -15,6 +19,8 @@
               <li><%= link_to t("layouts.header.settings"),
                 edit_user_path(current_user) %></li>
               <li class="divider"></li>
+              <li><%= link_to t("layouts.header.request"),
+                new_user_request_path(current_user) %></li>
               <li>
                 <%= link_to t("layouts.header.logout"), logout_path,
                   method: :delete %>
