--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,8 @@
         <% if logged_in? %>
           <% if current_user.is_admin? %>
             <li><%= link_to t("layouts.header.users"), admin_root_path %></li>
+            <li><%= link_to t("layouts.header.addbook"),
+              new_admin_book_url %></li>
           <% else %>
             <li><%= link_to t("layouts.header.users"), users_path %></li>
           <% end %>
