--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,10 @@
 <h4><%= @book.title %></h4>
 <h5><%= @book.author %></h5>
+<h3 id="favorite_num"><%= @book.marks.count %></h3>
+<h5><%= t "books.index.favorite" %></h5>
+<div id="mark_favorite">
+  <% if current_user.present? %>
+    <%= render current_user.favorite?(params[:id]) ? "rmfavorite" :
+      "favorite" %>
+  <% end %>
+</div>
