--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -3,16 +3,20 @@
     <%= form_for [@user, @request] do |f| %>
       <%= render "shared/error_messages", object: @request %>
 
-      <%= f.label :book_title %>
+      <%= f.label t("request.book_title") %>
       <%= f.text_field :book_title, class: "form-control" %>
 
-      <%= f.label :book_publish_date %>
-      <%= f.text_field :book_publish_date, class: "form-control" %>
+      <%= f.label t("request.book_publish_date") %>
+      <%= f.text_field :book_publish_date, class: "datepicker",
+        id: "form_pb_date" %>
 
-      <%= f.label :book_author, "book_author" %>
+      <%= f.label :book_author, t("request.book_author") %>
       <%= f.text_field :book_author, class: "form-control" %>
 
       <%= f.submit t("request.new.send"), class: "btn btn-primary" %>
     <% end %>
+    <br>
+    <%= link_to t("request.new.history"), user_requests_path(@user),
+      class: "btn btn-primary" %>
   </div>
 </div>
