--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <h1><%= @user.fullname %></h1>
+<section class="stats">
+  <%= render "shared/stats" %>
+</section>
+<%= render "follow_form" if logged_in? %>
