--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,13 @@
 <div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_tag books_path, method: :get do %>
+      <%= text_field_tag :search, params[:search],
+        placeholder: t("searches.title"), class: "form-control", value: nil %>
+      <%= submit_tag t("searches.search"), class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+<div class="row">
   <ul>
     <%= render @books %>
   </ul>
