--- a/app/views/marks/index.html.erb
+++ b/app/views/marks/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= link_to book.title, book %></td>
         <td><%= book.author %></td>
         <td><%= book.publish_date %></td>
-        <td><%= book.category %></td>
+        <td><%= book.category.name %></td>
         <td><%= book.pages %></td>
         <td><%= t "mark.#{mark.read}" %></td>
       </tr>
