--- a/app/views/books/_rmfavorite.html.erb
+++ b/app/views/books/_rmfavorite.html.erb
@@ -1,3 +1,3 @@
-<%= form_for [@book, @mark], html: {method: :delete}, remote: true do |f| %>
+<%= form_for [@book, @mark], html: {method: :path}, remote: true do |f| %>
   <%= f.submit t("books.show.unfavorite"), class: "btn" %>
 <% end %>
