--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,9 @@
                   admin_requests_path %></li>
               <% else %>
                 <li><%= link_to t("layouts.header.history"),
-                  user_marks_path(current_user) %></li>
+                  user_marks_path(current_user, mark: "read") %></li>
+                <li><%= link_to t("layouts.header.favorite"),
+                  user_marks_path(current_user, mark: "favorite") %></li>
                 <li><%= link_to t("layouts.header.request"),
                   new_user_request_path(current_user) %></li>
               <% end %>
