--- a/app/views/reviews/_reviews.html.erb
+++ b/app/views/reviews/_reviews.html.erb
@@ -7,6 +7,7 @@
     </span>
     <span class="timestamp">
       <% if current_user? review.user %>
+        <%= link_to t("action.edit"), edit_book_review_path(@book, review) %>
         <%= link_to t("action.delete"), [@book, review], method: :delete,
           data: {confirm: t("action.confirm")} %>
       <% end %>
