--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,6 +1,21 @@
-<div class="col-sm-3 col-lg-3 col-md-4">
-  <div class="caption">
-    <h4><%= link_to book.title, book %></h4>
-    <h5><%= book.author %></h5>
+<div class="col-sm-4 col-lg-4 col-md-4">
+  <div class="thumbnail">
+    <div class="caption">
+      <h4><b><%= link_to book.title, book %></b></h4>
+      <p><%= t "books.new.author" %> : <%= book.author %></p>
+    </div>
+    <div class="ratings">
+      <p class="pull-right"><%= book.reviews.count %>
+        <%= t "reviews.title" %></p>
+      <p>
+        <%= @rateds[book.id] %>
+        <% (0...@rateds[book.id].to_i).each do |i| %>
+          <span class="glyphicon glyphicon-star"></span>
+        <% end %>
+        <% (@rateds[book.id].to_i...5).each do |i| %>
+          <span class="glyphicon glyphicon-star-empty"></span>
+        <% end %>
+      </p>
+    </div>
   </div>
 </div>
