--- a/app/views/books/_favorite.html.erb
+++ b/app/views/books/_favorite.html.erb
@@ -1,3 +1,4 @@
 <%= form_for [@book, @mark], remote: true do |f| %>
-  <%= f.submit t("books.show.favorite"), class: "btn btn-small btn-primary" %>
+  <%= f.hidden_field :is_favorite, value: true %>
+  <%= f.submit t("books.show.favorite"), class: "btn btn-primary" %>
 <% end %>
