--- a/app/views/books/_rmfavorite.html.erb
+++ b/app/views/books/_rmfavorite.html.erb
@@ -1,3 +1,4 @@
-<%= form_for [@book, @mark], html: {method: :path}, remote: true do |f| %>
+<%= form_for [@book, @mark], remote: true do |f| %>
+  <%= f.hidden_field :is_favorite, value: false %>
   <%= f.submit t("books.show.unfavorite"), class: "btn" %>
 <% end %>
