--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,11 +1,16 @@
 <div class="col-md-9 col-md-offset-2">
   <div class="thumbnail">
+    <div class="col-md-4">
+      <%= grpicture_for @book, width: 200, height: 200 %>
+    </div>
     <div class="caption-full">
       <h4><%= link_to @book.title, @book %></h4>
       <p><%= t "books.new.author" %> : <%= @book.author %></p>
       <p><%= t "books.new.publish_date" %> : <%= @book.publish_date %></p>
       <p><%= t "books.new.pages" %> : <%= @book.pages %></p>
-      <p id="favorite_num"><%= @book.marks.count %> <%= t "books.index.favorite" %></p>
+      <p id="favorite_num">
+       <%= @book.marks.count %> <%= t "books.index.favorite" %>
+      </p>
     </div>
     <div class="ratings">
       <p class="pull-right"><%= @book.reviews.count %>
