--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,19 @@
-<h1><%= @user.fullname %></h1>
-<section class="stats">
-  <%= render "shared/stats" %>
-</section>
-<%= render "follow_form" if logged_in? %>
+<div class="row">
+  <aside class="col-md-4">
+    <section>
+      <h1>
+        <%= gravatar_for @user, width: 100, height: 100 %>
+        <%= @user.fullname %>
+      </h1>
+    </section>
+    <section class="stats">
+      <%= render "shared/stats" %>
+    </section>
+    <% if logged_in? %>
+      <% unless current_user.is_admin? %>
+        <%= render "follow_form" %>
+      <% end%>
+    <% end %>
+  </aside>
+</div>
+
