Comment in review 2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -177,6 +177,9 @@ input {
       padding: 5px 0;
     }
   }
+  .btn_comments {
+    width: 100px;
+  }
   .timestamp {
     color: $gray-light;
     display: block;
@@ -184,3 +187,6 @@ input {
   }
 }
 
+.review_form {
+  display: inline;
+}
