--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -8,7 +8,7 @@
       <p class="pull-right"><%= book.reviews.count %>
         <%= t "reviews.title" %></p>
       <p>
-        <%= @rateds[book.id] %>
+        <%= @rateds[book.id].round 2 %>
         <% (0...@rateds[book.id].to_i).each do |i| %>
           <span class="glyphicon glyphicon-star"></span>
         <% end %>
