--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,6 +1,8 @@
 <div id="review-<%= review.id %>">
   <li id="review-<%= review.id %>">
-    <h4><%= link_to review.user.fullname, review.user %></h4>
+    <div class="col-md-2 right">
+      <%= link_to grimage_for(review.user, width: 90, height: 75), review.user %>
+    </div>
     <%= review.content %>
     <%= render "shared/rated_review", review: review %>
     <%= t "times.posted" %> <%= time_ago_in_words review.created_at %>
