--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
 $("#comments_<%= @review.id %>").append(
-  "<%= j render 'comments/comment', review: @review, comment: @comment %>");
+  '<%= j render "comments/comment", review: @review, comment: @comment %>');
 $("#comment_field_<%= @review.id %>").val("")
