edit and delete comment 3

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -18,7 +18,7 @@
       <h4><%= t "comments.comment" %></h4>
       <ul id="comments_<%= review.id %>">
         <% if review.comments.any? %>
-          <%= render review.comments %>
+          <%= render review.comments.order_comment %>
         <% end %>
       </ul>
     </span>
