--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,6 @@
 <% if @reviews.any? %>
   <ol class="reviews">
-    <%= render @reviews %>
+    <%= render @reviews.order_review %>
   </ol>
   <%= will_paginate @reviews %>
 <% end %>
