--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -190,3 +190,15 @@ input {
 .review_form {
   display: inline;
 }
+
+#mark_favorite {
+  position: absolute;
+  top: 0;
+  left: 81%;
+}
+
+#mark_read {
+  position: absolute;
+  top: 0;
+  left: 68%;
+}
