--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <% end %>
     <%= yield %>
   </div>
-  <div class="container">
-    <%= render "layouts/footer" %>
-  </div>
+<footer class="footer">
+  <%= render "layouts/footer" %>
+</footer>
 </body>
 </html>
