--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,2 @@
-$("#like-<%= @activity.id %>").html('<%= j render "shared/unlike" %>');
+$("#like-<%= @activity.id %>").html(
+  '<%= j render "shared/unlike", activity: @activity %>');
