--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,2 @@
-$("#like-<%= @activity.id %>").html('<%= j render "shared/like" %>');
+$("#like-<%= @activity.id %>").html(
+  '<%= j render "shared/like", activity: @activity %>');
