--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,6 +71,10 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
+  position: fixed;
+  height: 70px;
+  bottom: 0;
+  width: 100%;
 }
 
 footer a {
