--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<div class="container">
   <small>
     <%= t "layouts.footer.copyright" %>
   </small>
@@ -8,4 +8,4 @@
       <li><%= link_to t("layouts.footer.help"), help_path %></li>
     </ul>
   </nav>
-</footer>
+</div>
