--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,35 +1,42 @@
-<div class="col-md-9 col-md-offset-2">
-  <div class="thumbnail">
-    <div class="col-md-4">
-      <%= link_to image_tag(@book.picture.url, size: Settings.size_book),
-        @book %>
-    </div>
-    <div class="caption-full">
-      <h4><%= link_to @book.title, @book %></h4>
-      <p><%= t "books.new.author" %> : <%= @book.author %></p>
-      <p><%= t "books.new.publish_date" %> : <%= @book.publish_date %></p>
-      <p><%= t "books.new.pages" %> : <%= @book.pages %></p>
-      <p id="favorite_num">
-        <%= @favorite_num %> <%= t "books.index.favorite" %>
-      </p>
-    </div>
-      <% if current_user.present? %>
-        <div id="mark_favorite">
-          <%= render current_user.favorite?(params[:id]) ? "rmfavorite" :
-            "favorite" %>
-        </div>
-        <div id="mark_read">
-          <%= render current_user.was_read?(params[:id]) ? "wasread" :
-            "markread" %>
-        </div>
-      <% end %>
-    <%= render "shared/rated" %>
-  </div>
+<div class="container col-md-9 col-md-offset-2">
   <div class="well">
-    <div id="review_form_<%= @book.id %>">
-      <%= render "shared/review_form", review: @review_new %>
+    <div class="row">
+      <div class="col-md-9">
+        <div class="col-md-4">
+          <%= link_to image_tag(@book.picture.url, size: Settings.size_book),
+            @book %>
+        </div>
+        <div class="col-md-6">
+          <h4><%= link_to @book.title, @book %></h4>
+          <p><%= t "books.new.author" %> : <%= @book.author %></p>
+          <p><%= t "books.new.publish_date" %> : <%= @book.publish_date %></p>
+          <p><%= t "books.new.pages" %> : <%= @book.pages %></p>
+          <p id="favorite_num">
+            <%= @favorite_num %> <%= t "books.index.favorite" %>
+          </p>
+          <%= render "shared/rated" %>
+        </div>
+      </div>
+      <div class="col-md-3 center">
+        <% if current_user.present? %>
+          <div id="mark_favorite" class="formmark">
+            <%= render current_user.favorite?(params[:id]) ? "rmfavorite" :
+              "favorite" %>
+          </div>
+          <div id="mark_read" class="formmark">
+            <%= render current_user.was_read?(params[:id]) ? "wasread" :
+              "markread" %>
+          </div>
+        <% end %>
+      </div>
     </div>
-    <br>
-    <%= render "shared/feed" %>
+  </div>
+    <div class="well">
+      <div id="review_form_<%= @book.id %>">
+        <%= render "shared/review_form", review: @review_new %>
+      </div>
+      <br>
+      <%= render "shared/feed" %>
+    </div>
   </div>
 </div>
