--- a/app/views/shared/_rated.html.erb
+++ b/app/views/shared/_rated.html.erb
@@ -1,7 +1,5 @@
 <div class="ratings" id="ratings_<%= @book.id %>">
-  <p class="pull-right"><%= @book.reviews.count %>
-    <%= t "reviews.title" %>
-  </p>
+  <p ><%= @book.reviews.count %> <%= t "reviews.title" %></p>
   <p>
     <%= @rated.round 2 %>
     <% (0...@rated.to_i).each do |i| %>
