--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,6 @@
-<h1><%= t "static_pages.home.title" %></h1>
 <% if logged_in? %>
-  <div class="span2 row">
-    <ul>
+  <div id="sidebar-wrapper">
+    <ul class="sidebar-nav">
       <% if @activities.any? %>
         <%= render @activities %>
       <% end %>
