--- a/app/views/books/_markread.html.erb
+++ b/app/views/books/_markread.html.erb
@@ -1,4 +1,4 @@
 <%= form_for [@book, @mark], remote: true do |f| %>
   <%= f.hidden_field :read, value: "read" %>
-  <%= f.submit t("books.show.markread"), class: "btn btn-primary" %>
+  <%= f.submit t("books.show.markread"), class: "btn btn-primary markform" %>
 <% end %>
