--- a/app/views/books/_wasread.html.erb
+++ b/app/views/books/_wasread.html.erb
@@ -1,3 +1,3 @@
-<button class="btn btn-primary disabled" type="submit">
+<button class="btn btn-primary disabled markform" type="submit">
   <%= t "books.show.wasread" %>
 </button>
