--- a/app/views/reviews/edit.js.erb
+++ b/app/views/reviews/edit.js.erb
@@ -1,2 +1,2 @@
-$("#review_form_<%= @book.id %>").html(
+$("#review_info-<%= @review.id %>").html(
   '<%= j render "shared/review_update_form", review: @review %>');
