--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -1,8 +1,11 @@
 <%= form_for [@book, review, comment], remote: true do |f| %>
   <%= render "shared/error_messages", object: comment %>
-  <%= f.text_area :content, placeholder: t("comments.your_comment"),
-    id: "comment_field_#{review.id}", class: "form-control" %>
-  <%= f.hidden_field :review_id, value: review.id %>
-  <%= f.submit t("comments.comment"), id: "btn_comments",
-    class: "btn btn-primary btn_comments" %>
+  <div class="form-inline">
+    <%= f.text_area :content, placeholder: t("comments.your_comment"),
+      id: "comment_field_#{review.id}", size: Settings.size_text_comment,
+      class: "form-control" %>
+    <%= f.hidden_field :review_id, value: review.id %>
+    <%= f.submit t("comments.comment"), id: "btn_comments",
+      class: "btn btn-primary btn_comments" %>
+  </div>
 <% end %>
