--- a/app/views/comments/edit.js.erb
+++ b/app/views/comments/edit.js.erb
@@ -1,3 +1,3 @@
-$("#comment_form_<%= @review.id %>").html(
+$("#comment-<%= @comment.id %>").html(
   '<%= j render "shared/comment_update_form", review: @review,
   comment: @comment %>');
