--- a/app/views/shared/_rated.html.erb
+++ b/app/views/shared/_rated.html.erb
@@ -1,11 +1,11 @@
 <div class="ratings" id="ratings_<%= @book.id %>">
-  <p ><%= @book.reviews.count %> <%= t "reviews.title" %></p>
+  <p><%= @book.reviews.count %> <%= t "reviews.title" %></p>
   <p>
-    <%= @rated.round 2 %>
-    <% (0...@rated.to_i).each do |i| %>
+    <%= @book.rated.round 2 %>
+    <% (0...@book.rated.to_i).each do |i| %>
       <span class="glyphicon glyphicon-star"></span>
     <% end %>
-    <% (@rated.to_i...5).each do |i| %>
+    <% (@book.rated.to_i...5).each do |i| %>
       <span class="glyphicon glyphicon-star-empty"></span>
     <% end %>
   </p>
